<resources>
    <string name="app_name">Inventory App Stage 1</string>
    <string name="productName">Enter Product Name..</string>
    <string name="productPrice">Enter Product Price..</string>
    <string name="productQuantity">Enter Product Quantity..</string>
    <string name="supplierName">Enter Supplier Name..</string>
    <string name="supplierPhone">Enter Supplier Phone..</string>
    <string name="addToInventory">Add to inventory</string>
    <string name="viewResult">Show All Inventory</string>
    <string name="error">You must Enter a Value!</string>
    <string name="successmsg">Product Added Successfully</string>
    <string name="failedmsg">Failed to Add the Product</string>
</resources>
