<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        tools:context="com.example.mohamed.inventoryappstage1.MainActivity">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:padding="@dimen/smalldp"
            android:theme="@style/AppTheme">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/produtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/meddp"
                android:drawableLeft="@drawable/development"
                android:drawablePadding="@dimen/smalldp"
                android:hint="@string/productName"
                android:inputType="text"
                android:maxLines="1"
                android:padding="@dimen/smalldp"
                android:textSize="@dimen/fifteensp"
                tools:ignore="RtlHardcoded" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:padding="@dimen/smalldp"
            android:theme="@style/AppTheme">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/produtPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/meddp"
                android:drawableLeft="@drawable/ic_attach_money"
                android:drawablePadding="@dimen/smalldp"
                android:hint="@string/productPrice"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:padding="@dimen/smalldp"
                android:textSize="@dimen/fifteensp"
                tools:ignore="RtlHardcoded" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:padding="@dimen/smalldp"
            android:theme="@style/AppTheme">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/productQuantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/meddp"
                android:drawableLeft="@drawable/stackoverflow"
                android:drawablePadding="@dimen/smalldp"
                android:hint="@string/productQuantity"
                android:inputType="number"
                android:maxLines="1"
                android:padding="@dimen/smalldp"
                android:textSize="@dimen/fifteensp"
                tools:ignore="RtlHardcoded" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:padding="@dimen/smalldp"
            android:theme="@style/AppTheme">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/supplierName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/meddp"
                android:drawableLeft="@drawable/hotelsupplier"
                android:drawablePadding="@dimen/smalldp"
                android:hint="@string/supplierName"
                android:inputType="text"
                android:maxLines="1"
                android:padding="@dimen/smalldp"
                android:textSize="@dimen/fifteensp"
                tools:ignore="RtlHardcoded" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:padding="@dimen/smalldp"
            android:theme="@style/AppTheme">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/supplierPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/meddp"
                android:drawableLeft="@drawable/telephone"
                android:drawablePadding="@dimen/smalldp"
                android:hint="@string/supplierPhone"
                android:inputType="number"
                android:maxLines="1"
                android:padding="@dimen/smalldp"
                android:textSize="@dimen/fifteensp"
                tools:ignore="RtlHardcoded" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/addtoDB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/meddp"
            android:background="@color/colorPrimary"
            android:padding="@dimen/meddp"
            android:text="@string/addToInventory"
            android:textColor="@android:color/white"
            android:textSize="@dimen/twentysp" />

        <Button
            android:id="@+id/getfromDB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/meddp"
            android:background="@color/colorPrimary"
            android:padding="@dimen/meddp"
            android:text="@string/viewResult"
            android:textColor="@android:color/white"
            android:textSize="@dimen/twentysp" />

        <TextView
            android:id="@+id/showdatatv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/smalldp"
            android:textSize="@dimen/fifteensp"
            android:visibility="invisible" />
    </LinearLayout>
</ScrollView>